# ads-sample-16-qt-linux

./: .clang-format  .gitignore  AdsDatatypeEntry.cpp  AdsDatatypeEntry.h  AdsParseSymbols.cpp  AdsParseSymbols.h  README.md  Sample16.cpp  Sample16Dlg.cpp  Sample16Dlg.h  Sample16Dlg.ui  meson.build
